--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Pokémon Finder</title>
+    <link rel="icon" type="image/x-icon" href="/favicon.ico" />
     <link rel="stylesheet" href="/style.css" />
   </head>
   <body
@@ -40,7 +41,7 @@
               <path
                 stroke-linecap="round"
                 stroke-linejoin="round"
-                d="M12 18.75a6 6 0 0 0 6-6v-1.5m-6 7.5a6 6 0 0 1-6-6v-1.5m6 7.5v3.75m-3.75 0h7.5M12 15.75a3 3 0 0 1-3-3V4.5a3 3 0 1 1 6 0v8.25a3 3 0 0 1-3 3Z"
+                d="M12 18.75a6 6 0 0 0 6-6v-1.5m-6 7.5a6 6 0 0 1-6-6v-1.5m6 7.5v3.75m-3.75 0h7.5M12 15.75a3 3 0 0 1-3-3V4.5a3 3 0 1 1-6 0v8.25a3 3 0 0 1-3 3Z"
               />
             </svg>
           </button>
@@ -54,6 +55,16 @@
       </div>
       <div id="pokemonInfo" class="mt-6 text-center text-gray-700">
         <!-- Pokémon info will be displayed here -->
+      </div>
+
+      <!-- History Section - Removed h3 and border -->
+      <div id="searchHistory" class="mt-8 pt-4">
+        <ul id="historyList" class="list-none space-y-4">
+          <!-- History items (full cards) will be added here -->
+          <li class="italic text-sm text-center text-gray-600">
+            No history yet.
+          </li>
+        </ul>
       </div>
     </div>
 
