feat: implement voice search overlay with microphone icon

--- a/index.html
+++ b/index.html
@@ -61,6 +61,7 @@
     >
       <i class="fas fa-microphone text-white text-6xl"></i>
     </div>
+    <!-- The overlay is hidden by default and is shown when the microphone button is clicked. -->
 
     <!-- Footer -->
     <footer
